# mlops_hw

./: .gitignore  .pre-commit-config.yaml  README.md  hw3_report.md  infer.py  model.py  pyproject.toml  run_server.py  train.py
.dvc/: config
configs/: model_config.yaml  server_config.yaml
data/: config.py  dataset.py  train_evaluate.py
mlops_hw/: config.py  dataset.py  train_evaluate.py
mlruns/0/: meta.yaml
mlruns/0/0399cf1493a94c999865128f0a3df474/: meta.yaml
mlruns/0/0399cf1493a94c999865128f0a3df474/tags/: mlflow.runName  mlflow.source.name
mlruns/0/0848842af91b4cca813461e3e72cfa66/: meta.yaml
mlruns/0/0848842af91b4cca813461e3e72cfa66/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/903036f8de9a4d149504aa236b32fe1c/: meta.yaml
mlruns/0/903036f8de9a4d149504aa236b32fe1c/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/968d585ddc23467b9a23206c48746aeb/: meta.yaml
mlruns/0/968d585ddc23467b9a23206c48746aeb/metrics/: train_acc  train_loss
mlruns/0/968d585ddc23467b9a23206c48746aeb/tags/: mlflow.runName
mlruns/0/96db085611594d6fb091f62b21af7534/: meta.yaml
mlruns/0/96db085611594d6fb091f62b21af7534/metrics/: train_acc  train_loss
mlruns/0/96db085611594d6fb091f62b21af7534/tags/: mlflow.runName
outputs/2023-12-03/19-59-22/.hydra/: hydra.yaml
outputs/2023-12-03/20-02-10/.hydra/: hydra.yaml
outputs/2023-12-03/20-02-55/.hydra/: hydra.yaml
outputs/2023-12-03/20-04-06/.hydra/: hydra.yaml
saved_models/: .gitignore  cnn.onnx.dvc  cnn.pt.dvc
triton/: client.py  docker-compose.yaml  four.npy
(+38 files in other folders)
