[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "HW for MLOps course"
authors = ["Alexandr Pavlov <pavlov.aleksandr.v@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "2.0.1+cu117", source="torch"}
torchvision = { version="^0.15.2+cu117", source="torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["somepytools"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
